# cpp_examples

./: .clang-tidy  .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
clang-tidy-plugin/: NoStandardTypesInInterfaceCheck.cpp
libs/decorator/: CMakeLists.txt
libs/decorator/src/: widget.cpp
libs/quantity/: CMakeLists.txt
libs/quantity/include/: Quantity.hpp  signals.hpp
libs/strong_type/: CMakeLists.txt
libs/strong_type/include/: LimitedNumericStrongType.hpp  Quantity.hpp  StrongType.hpp  widget.hpp
package/: vcpkg.json
src/: CheckNoStandardTypesInInterface.cpp  DecoratorTest.cpp  LimitedNumericTypeTest.cpp  QuantityTest.cpp  StrongTypeTest.cpp
